<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:padding="@dimen/padding_10">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_height"
                        android:clickable="true"
                        android:id="@+id/returning_student"
                        android:layout_alignParentStart="true"
                        app:cardElevation="@dimen/card_elevation"
                        android:layout_marginStart="@dimen/margin_15"
                        android:backgroundTint="@color/cardWhite"
                        android:padding="@dimen/padding_20"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@mipmap/ic_launcher"
                                android:contentDescription="@string/img" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/returning_student"
                                android:textAlignment="center"
                                android:layout_marginTop="@dimen/margin_10"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_19"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:padding="@dimen/padding_10">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_height"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/belated_payment"
                        android:backgroundTint="@color/cardWhite"
                        android:layout_marginStart="@dimen/margin_15"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/padding_20"
                        app:cardElevation="@dimen/card_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:contentDescription="@string/img"
                                android:src="@mipmap/ic_launcher" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_10"
                                android:text="@string/belated_payment"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_19" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:padding="@dimen/padding_10">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_height"
                        android:id="@+id/lms"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/cardWhite"
                        android:layout_marginStart="@dimen/margin_15"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/padding_20"
                        app:cardElevation="@dimen/card_elevation">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:contentDescription="@string/img"
                                android:src="@mipmap/ic_launcher" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_10"
                                android:text="@string/lms"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_19" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:padding="@dimen/padding_10">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_height"
                        android:id="@+id/fresh_students"
                        android:clickable="true"
                        android:layout_alignParentStart="true"
                        app:cardElevation="@dimen/card_elevation"
                        android:layout_marginStart="@dimen/margin_15"
                        android:backgroundTint="@color/cardWhite"
                        android:padding="@dimen/padding_20"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@mipmap/ic_launcher"
                                android:contentDescription="@string/img" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fresh_students"
                                android:layout_marginTop="@dimen/margin_10"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_19"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>